--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p> I welcome any questions or employment opportunities. </p>
-									<form method="post" action="#">
+									<form action="https://formspree.io/f/moqpprpr" method="post" >
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
