--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									<form action="https://formspree.io/f/moqpprpr" method="post" >
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+											<div class="col-6 col-12-xsmall"><input type="email" name="_replyto" id="email" placeholder="Email" /></div>
 											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
 											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
 											<div class="col-12">
