--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<iframe  class="image"
+											src="https://www.youtube.com/embed/2y-w995IB8Q?controls=1">
+											</iframe>
+											<a href="https://youtu.be/2y-w995IB8Q" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>BandAide</h4>
-												<p>A social media app for musicians. Built using the MERN stack Redux.</p>
+												<p>A social media app for musicians. Built using the MERN stack and Redux.</p>
 											</div>
 										</article>
 										<!-- <article>
