--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
 											<iframe  class="image"
 											src="https://www.youtube.com/embed/2y-w995IB8Q?controls=1">
 											</iframe>
-											<a href="https://youtu.be/2y-w995IB8Q" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											
 											<div class="inner">
-												<h4>BandAide</h4>
+												<a href="https://youtu.be/2y-w995IB8Q" class="image"><h4>BandAide</h4></a>
+												
 												<p>A social media app for musicians. Built using the MERN stack and Redux.</p>
 											</div>
 										</article>
