--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <iframe
                   class="image"
                   src="https://www.youtube.com/embed/rT5gGbinBW4?controls=1"
+                  allowfullscreen="allowfullscreen"
                 >
                 </iframe>
                 <div class="inner">
@@ -135,6 +136,7 @@
                 <iframe
                   class="image"
                   src="https://www.youtube.com/embed/yifJcEltrPk?controls=1"
+                  allowfullscreen="allowfullscreen"
                 >
                 </iframe>
 
@@ -155,6 +157,7 @@
                 <iframe
                   class="image"
                   src="https://www.youtube.com/embed/2y-w995IB8Q?controls=1"
+                  allowfullscreen="allowfullscreen"
                 >
                 </iframe>
 
